# naics-embedder

./: .gitignore  .markdownlint.jsonc  CLAUDE.md  LICENSE  LINEAR_BRANCH_IMPLEMENTATION.md  LINEAR_BRANCH_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE_GPU.txt  README.md  TOOLS_INTEGRATION.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_ISSUE_20.md  VERIFICATION_REPORT_V2.md  cli.py  example.py  mkdocs.yml  pyproject.toml  refactor.md  scratch.ipynb
.github/workflows/: docs.yml  tests.yml
conf/: config.yaml
conf/curriculum/: 00_test.yaml  01_stage.yaml  01_stage_easy.yaml  02_stage.yaml  03_stage.yaml  04_stage.yaml  05_stage.yaml  default.yaml  stage_1.yaml
conf/data/: default.yaml
conf/data_generation/: distances.yaml
conf/data_loader/: tokenization.yaml
conf/model/: default.yaml
conf/text_curriculum/: 01_stage.yaml  01_text.yaml  02_stage.yaml  02_text.yaml  03_stage.yaml  chain_default.yaml
conf/training/: default.yaml
docs/: .nav.yml  EVALUATION_METRICS_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  SUMMARY_GPU_OPTIMIZATION.md  architecture.md  benchmarks.md  cli.md  features.md  gpu_optimization.md  index.md  lit.md  overview.md  refactor_plan.md  report.md  sampling_architecture.md  text_training.md  usage.md
docs/api/: cli.md  contrastive_loss.md  datamodule.md  encoder.md  evaluation.md  hgcn.md  hgcn_datamodule.md  hgcn_streaming_dataset.md  hierarchy_preservation_loss.md  hyperbolic.md  loss.md  moe.md  rank_order_preservation_loss.md  streaming_dataset.md  tokenization_cache.md
notebooks/: scratchpad.ipynb
outputs/${curriculum.name}/version_0/: events.out.tfevents.1762797570.Mac.45744.0
outputs/${curriculum.name}/version_1/: events.out.tfevents.1762797607.Mac.45884.0
outputs/${curriculum.name}/version_2/: events.out.tfevents.1762797646.Mac.46082.0
outputs/${curriculum.name}/version_3/: events.out.tfevents.1762797857.Mac.46432.0
outputs/${curriculum.name}/version_4/: events.out.tfevents.1762798046.Mac.46818.0
outputs/00_test/version_0/: events.out.tfevents.1762267344.Mac.37177.0
outputs/00_test/version_1/: events.out.tfevents.1762268090.Mac.37998.0
outputs/00_test/version_2/: events.out.tfevents.1762268307.Mac.38348.0
outputs/00_test/version_3/: events.out.tfevents.1762268652.Mac.38702.0  hparams.yaml
outputs/00_test/version_4/: events.out.tfevents.1762268743.Mac.38971.0
outputs/00_test/version_5/: events.out.tfevents.1762269255.Mac.39600.0
outputs/visualizations/: evaluation_report.md
reports/: SADC.md  hgcn.md
scripts/: README.md  README_metrics.md  current_config.py  example_optimizer_usage.py  gpu_config.py  investigate_hierarchy.py  optimize_gpu_config.py  populate_json_metrics.py  show_current_config.py  visualize_metrics.py
site/: 404.html  index.html  objects.inv
site/architecture/: index.html
site/embeddings/: index.html
site/search/: search_index.json
site/training/: index.html
src/: train.py
src/naics_embedder/: cli.py
src/naics_gemini/: cli.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_training_pipeline.py
tests/unit/: __init__.py  test_cli_training.py  test_config.py  test_curriculum.py  test_data_distances.py  test_datamodule.py  test_encoder.py  test_false_negative_strategy.py  test_graph_downstream_evaluation.py  test_graph_evaluation.py  test_hard_negative_mining.py  test_hyperbolic.py  test_loss.py  test_moe.py  test_naics_model.py  test_streaming_dataset.py  test_streaming_sampling.py  test_text_evaluation.py  test_utils_utilities.py
tutorials/: _quarto.yml
(+137 files in other folders)
